--- a/src/app/shared/shared.logout.routed/shared.logout.routed.html
+++ b/src/app/shared/shared.logout.routed/shared.logout.routed.html
@@ -1,4 +1,4 @@
-<div class="logout-wrapper animate-fade-in">
+<div class="logout-wrapper animate-fade-in" [ngClass]="{ 'entorno-dev': isDev }">
   <div class="logout-card shadow-lg">
     <h2 class="logout-title">
       <i class="bi bi-person-circle me-2"></i> Cerrar sesión
