--- a/src/app/shared/shared.recuperarcontrasena.unrouted/shared.recuperarcontrasena.unrouted.component.html
+++ b/src/app/shared/shared.recuperarcontrasena.unrouted/shared.recuperarcontrasena.unrouted.component.html
@@ -1,4 +1,4 @@
-<div class="recuperar-wrapper animate-fade-in">
+<div class="recuperar-wrapper animate-fade-in" [ngClass]="{ 'entorno-dev': isDev }">
   <div class="login-card shadow-lg">
     <h2 class="login-title mb-4">
       <i class="bi bi-key me-2"></i> Recuperar contraseña
