--- a/src/app/shared/shared.login.routed/shared.login.routed.html
+++ b/src/app/shared/shared.login.routed/shared.login.routed.html
@@ -1,4 +1,4 @@
-<div class="login-wrapper animate-fade-in">
+<div class="login-wrapper animate-fade-in" [ngClass]="{ 'entorno-dev': isDev }">
   <div class="login-card shadow-lg">
     <h1 class="login-title mb-3">
       <i class="bi bi-person-circle me-2"></i> Iniciar sesión
