--- a/src/app/component/producto/producto.admin.plist.routed/producto.admin.plist.routed.component.html
+++ b/src/app/component/producto/producto.admin.plist.routed/producto.admin.plist.routed.component.html
@@ -5,9 +5,10 @@
   <div class="row">
     <div class="col-12">
       <!-- Título -->
-      <h2 class="mb-4 text-center">
+      <h2 class="mt-5 mb-4 text-center">
         <i class="bi bi-list"></i> Listado de Productos
       </h2>
+
 
       <!-- Buscador -->
       <div class="mb-4 d-flex justify-content-center align-items-center">
