--- a/src/app/component/producto/producto.admin.xproveedor.plist.routed/producto.admin.xproveedor.plist.routed.component.css
+++ b/src/app/component/producto/producto.admin.xproveedor.plist.routed/producto.admin.xproveedor.plist.routed.component.css
@@ -280,21 +280,16 @@
   box-shadow: inset 0 0 8px rgba(13, 110, 253, 0.15);
 }
 
-.entorno-dev .pagination .page-link {
-  color: #0d6efd;
-  border-color: #0d6efd;
-}
-
-.entorno-dev .pagination .page-link:hover {
-  background-color: #e0f0ff;
-  color: #003d99;
-  border-color: #0d6efd;
+.entorno-dev .pagination .page-item .page-link {
+  background-color: #d0e7ff !important;
+  color: #0d6efd !important;
+  border-color: #a0c7ff !important;
 }
 
 .entorno-dev .pagination .page-item.active .page-link {
-  background-color: #0b5ed7;
-  color: white;
-  border-color: #0a58ca;
+  background-color: #0d6efd !important;
+  color: white !important;
+  border-color: #0a58ca !important;
 }
 
 .entorno-dev .go-to-page-button {
