--- a/src/app/shared/shared.menu.unrouted/shared.menu.unrouted.component.html
+++ b/src/app/shared/shared.menu.unrouted/shared.menu.unrouted.component.html
@@ -56,10 +56,7 @@
 
         <!-- Opción "Creación" solo para ADMIN -->
         <li class="nav-item" *ngIf="isAdmin">
-          <a
-            class="nav-link"
-            [routerLink]="'/admin/producto/new'"
-          >
+          <a class="nav-link" [routerLink]="'/admin/producto/new'">
             <i class="bi bi-plus-circle me-1"></i> Creación de Producto
           </a>
         </li>
@@ -75,7 +72,8 @@
           </a>
         </li>
 
-        <li class="nav-item">
+        <!-- Entorno -->
+        <li class="nav-item" *ngIf="activeSession && isAdmin">
           <a class="nav-link">
             <i class="bi bi-gear"></i> Entorno
             <select
@@ -98,11 +96,18 @@
         </a>
       </span>
       } @else {
-      <span class="navbar-text me-3" [ngClass]="{ 'text-white': !isDev, 'text-dev': isDev }">
+      <span
+        class="navbar-text me-3"
+        [ngClass]="{ 'text-white': !isDev, 'text-dev': isDev }"
+      >
         <i class="bi bi-person-circle"></i>
         <a
           href="/bynif/{{ userNif }}"
-          [ngClass]="{ 'text-white': !isDev, 'text-dev': isDev, 'text-decoration-underline': true }"
+          [ngClass]="{
+            'text-white': !isDev,
+            'text-dev': isDev,
+            'text-decoration-underline': true
+          }"
         >
           {{ proveedorDescripcion }} ({{ userNif }})
         </a>
