--- a/src/app/component/producto/producto.admin.edit.routed/producto.admin.edit.routed.component.html
+++ b/src/app/component/producto/producto.admin.edit.routed/producto.admin.edit.routed.component.html
@@ -401,7 +401,7 @@
               <label class="form-label fw-bold">Imágenes actuales</label>
               <div class="d-flex flex-wrap gap-3 justify-content-center">
                 <div *ngFor="let img of oProducto.imagenes" class="position-relative">
-                  <img [src]="'http://localhost:8086' + img.imagenUrl" alt="Imagen" width="145" height="135" class="rounded shadow border" />
+                  <img [src]="'https://proveedores-back-familycash.onrender.com' + img.imagenUrl" alt="Imagen" width="145" height="135" class="rounded shadow border" />
                   <button type="button" class="boton-eliminar-imagen" (click)="eliminarImagen(img.id)" title="Eliminar imagen">
                     &times;
                   </button>
@@ -435,7 +435,7 @@
               <label class="form-label fw-bold">Documentos actuales</label>
               <ul class="list-group">
                 <li class="list-group-item d-flex align-items-center justify-content-between flex-wrap" *ngFor="let doc of oProducto.documentos">
-                  <a [href]="'http://localhost:8086' + doc.documentoUrl" target="_blank" class="me-3">
+                  <a [href]="'https://proveedores-back-familycash.onrender.com' + doc.documentoUrl" target="_blank" class="me-3">
                     {{ doc.nombreOriginal }}
                   </a>                  
                 
