--- a/src/app/shared/shared.menu.unrouted/shared.menu.unrouted.component.html
+++ b/src/app/shared/shared.menu.unrouted/shared.menu.unrouted.component.html
@@ -4,7 +4,7 @@
 >
   <div class="container-fluid">
     <!-- Logo -->
-    <a class="navbar-brand" href="https://proveedores.familycash.es/home">
+    <a class="navbar-brand" href="home">
       <img
         [src]="logoUrl"
         [ngClass]="{ 'logo-dev': isDev }"
@@ -35,9 +35,9 @@
           <a
             class="nav-link"
             [class.active]="
-              strRuta == 'https://proveedores.familycash.es/home' || strRuta == 'https://proveedores.familycash.es/' || strRuta == ''
+              strRuta == 'home' || strRuta == '/' || strRuta == ''
             "
-            href="https://proveedores.familycash.es/home"
+            href="/home"
           >
             <i class="bi bi-house-door"></i> Inicio
           </a>
@@ -47,8 +47,8 @@
         <li class="nav-item" *ngIf="isAdmin">
           <a
             class="nav-link"
-            [class.active]="strRuta == 'https://proveedores.familycash.es/admin/producto/plist'"
-            href="https://proveedores.familycash.es/admin/producto/plist"
+            [class.active]="strRuta == '/admin/producto/plist'"
+            href="/admin/producto/plist"
           >
             <i class="bi bi-collection"></i>Todos los Productos
           </a>
@@ -56,7 +56,7 @@
 
         <!-- Opción "Creación" solo para ADMIN -->
         <li class="nav-item" *ngIf="isAdmin">
-          <a class="nav-link" [routerLink]="'https://proveedores.familycash.es/admin/producto/new'">
+          <a class="nav-link" [routerLink]="'/admin/producto/new'">
             <i class="bi bi-plus-circle me-1"></i> Creación de Producto
           </a>
         </li>
@@ -65,8 +65,8 @@
         <li class="nav-item" *ngIf="isAdmin || isProveedor">
           <a
             class="nav-link"
-            [class.active]="strRuta == 'https://proveedores.familycash.es/producto/xproveedor/plist'"
-            [routerLink]="'https://proveedores.familycash.es/producto/xproveedor/plist'"
+            [class.active]="strRuta == '/producto/xproveedor/plist'"
+            [routerLink]="'/producto/xproveedor/plist'"
           >
             <i class="bi bi-box-seam"></i> Productos
           </a>
@@ -91,7 +91,7 @@
       <!-- Sesión -->
       @if (!activeSession) {
       <span class="navbar-text">
-        <a href="https://proveedores.familycash.es/login" class="btn btn-outline-light me-2">
+        <a href="/login" class="btn btn-outline-light me-2">
           <i class="bi bi-box-arrow-in-right"></i> Iniciar Sesión
         </a>
       </span>
@@ -102,7 +102,7 @@
       >
         <i class="bi bi-person-circle"></i>
         <a
-          href="https://proveedores.familycash.es/bynif/{{ userNif }}"
+          href="/bynif/{{ userNif }}"
           [ngClass]="{
             'text-white': !isDev,
             'text-dev': isDev,
@@ -113,7 +113,7 @@
         </a>
       </span>
       <span class="navbar-text">
-        <a href="https://proveedores.familycash.es/logout" class="btn btn-outline-light">
+        <a href="/logout" class="btn btn-outline-light">
           <i class="bi bi-box-arrow-right"></i> Logout
         </a>
       </span>
