--- a/src/app/component/producto/producto.admin.edit.routed/producto.admin.edit.routed.component.html
+++ b/src/app/component/producto/producto.admin.edit.routed/producto.admin.edit.routed.component.html
@@ -401,7 +401,7 @@
               <label class="form-label fw-bold">Imágenes actuales</label>
               <div class="d-flex flex-wrap gap-3 justify-content-center">
                 <div *ngFor="let img of oProducto.imagenes" class="position-relative">
-                  <img [src]="'https://proveedores-back-familycash.onrender.com' + img.imagenUrl" alt="Imagen" width="145" height="135" class="rounded shadow border" />
+                  <img *ngIf="esImagenDesdeFtp(img.imagenUrl)" [src]="getUrlSegura(img.imagenUrl)" class="img-fluid" />
                   <button type="button" class="boton-eliminar-imagen" (click)="eliminarImagen(img.id)" title="Eliminar imagen">
                     &times;
                   </button>
@@ -435,9 +435,10 @@
               <label class="form-label fw-bold">Documentos actuales</label>
               <ul class="list-group">
                 <li class="list-group-item d-flex align-items-center justify-content-between flex-wrap" *ngFor="let doc of oProducto.documentos">
-                  <a [href]="'https://proveedores-back-familycash.onrender.com' + doc.documentoUrl" target="_blank" class="me-3">
+                  <a [href]="getUrlSegura(doc.documentoUrl)" target="_blank" class="btn btn-outline-primary btn-sm">
                     {{ doc.nombreOriginal }}
-                  </a>                  
+                  </a>
+                 
                 
                   <select
                     class="form-select form-select-sm w-auto me-3"
