--- a/src/app/component/producto/producto.admin.edit.routed/producto.admin.edit.routed.component.html
+++ b/src/app/component/producto/producto.admin.edit.routed/producto.admin.edit.routed.component.html
@@ -435,12 +435,7 @@
               <label class="form-label fw-bold">Documentos actuales</label>
               <ul class="list-group">
                 <li class="list-group-item d-flex align-items-center justify-content-between flex-wrap" *ngFor="let doc of oProducto.documentos">
-                  <a [href]="getUrlSegura(doc.documentoUrl)" target="_blank"
-                    class="btn btn-sm"
-                    [ngClass]="{
-                      'btn-outline-success': !isDev,
-                      'btn-outline-primary': isDev
-                    }">
+                  <a [href]="getUrlSegura(doc.documentoUrl)" >
                     {{ doc.nombreOriginal }}
                   </a>
 
