--- a/src/app/shared/shared.login.routed/shared.login.routed.html
+++ b/src/app/shared/shared.login.routed/shared.login.routed.html
@@ -109,6 +109,12 @@
       </a>
     </div>
 
+    <div class="text-center mt-3">
+      <small>
+        Este proceso inicialmente suele tardar unos segundos.
+      </small>
+    </div>
+
     <!-- Mensaje de error -->
     <div class="error-message mt-4" *ngIf="errorMessage">
       {{ errorMessage }}
